--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,32 @@ body {
   overflow: hidden;
   position: relative;
 }
+button {
+  height: 40px;
+  width: 140px;
+  border: 1px solid var(--primary-color);
+  font-weight: 500px;
+  background-color: #1e1e1e;
+  cursor: pointer;
+  color: var(--primary-color);
+  font-size: 18px;
+  position: relative;
+  overflow: hidden;
+}
+button::after {
+  content: "Download Now";
+  top: auto;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 8px 0;
+  color: #000;
+  font-size: 15px !important;
+  transition: 0.6s;
+  transform: translateX(130px);
+  background: linear-gradient(90deg, var(--primary-color), #f7c400 80%);
+}
+button:hover::after {
+  transform: translateX(0);
+}
