--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,9 @@
 }
 
 :root {
-  --primary-color: #ffdb39;
-  --primary-dark: #f7c400;
-  --primary-light: #ffec9e;
+  --primary-color: #dbccff;
+  /* --primary-dark: #f7c400;
+  --primary-light: #ffec9e; */
 }
 
 body {
@@ -29,7 +29,11 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #1e1e1e;
+  background: linear-gradient(
+    0deg,
+    rgba(44, 2, 89, 1) 0%,
+    rgba(16, 16, 16) 100%
+  );
   overflow: hidden;
   position: relative;
 }
@@ -53,11 +57,11 @@ button::after {
   width: 100%;
   height: 100%;
   padding: 8px 0;
-  color: #000;
+  color: #fff;
   font-size: 15px !important;
   transition: 0.6s;
   transform: translateX(130px);
-  background: linear-gradient(90deg, var(--primary-color), #f7c400 80%);
+  background: linear-gradient(90deg, var(--primary-color), #8754ff 80%);
 }
 button:hover::after {
   transform: translateX(0);
