--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   z-index: 1;
-  background-color: #1e1e1e;
-  color: #f5f5f5;
+  background-color: #ffffff;
+  color: #090909;
 }
 
 .header-wrapper {
@@ -65,4 +65,17 @@ button::after {
 }
 button:hover::after {
   transform: translateX(0);
+}
+section {
+  display: flex;
+  flex-direction: column;
+  padding: 80px 12%;
+}
+
+.SectionTitle {
+  width: 100%;
+  font-size: 36px;
+  text-align: center;
+  margin-bottom: 50px;
+  color: var(--primary-color);
 }
