--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 * {
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth;
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
@@ -75,7 +76,7 @@ section {
 
 .SectionTitle {
   width: 100%;
-  font-size: 36px;
+  font-size: 48px;
   text-align: center;
   margin-bottom: 50px;
   color: var(--primary-color);
