--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -4,6 +4,7 @@
   padding: 0 12%;
   width: 100%;
   min-height: 80vh;
+  color: white;
 }
 
 .headerWrapper {
@@ -197,10 +198,65 @@
   width: 500px;
   object-fit: cover;
   border-radius: 20px;
+  box-shadow: 5px 5px 0 rgba(250, 204, 168, 0.5);
 }
 .about .aboutContent {
   width: 50%;
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+.about .aboutContent .aboutCard {
+  padding: 20px 20px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  color: white;
+  display: flex;
+  align-items: center;
+  transition: 0.6s;
+}
+.about .aboutContent .aboutCard:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 5px 5px rgba(255, 255, 255, 0.5);
+  border-color: #8754ff;
+}
+.about .aboutContent .aboutCard img {
+  height: 50px;
+  width: 50px;
+  margin-right: 30px;
+  filter: invert(100%);
+}
+.about .aboutContent .aboutCard h3 {
+  font-size: 26px;
+  font-weight: 300;
+  margin-bottom: 20px;
+  transition: 0.6s;
+}
+.about .aboutContent .aboutCard:hover h3 {
+  color: var(--primary-color);
+}
+.about .aboutContent .aboutCard p {
+  color: rgba(255, 255, 255, 0.5);
+  width: 90%;
+}
+
+@media screen and (max-width: 1200px) {
+  .about {
+    /* display: flex; */
+    flex-direction: column;
+    align-items: center;
+  }
+  .about .aboutContent {
+    width: 100%;
+    margin-top: 50px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .about .aboutImage {
+    width: 100%;
+  }
+  .about .aboutImage img {
+    height: 100%;
+    width: 100%;
+  }
 }
