--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -260,3 +260,100 @@
     width: 100%;
   }
 }
+
+.Experience_container {
+  background: linear-gradient(
+    0deg,
+    rgba(44, 2, 89, 1) 0%,
+    rgba(16, 16, 16) 100%
+  );
+}
+
+.Experience {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  gap: 50px;
+  color: #fff;
+}
+.Experience .skills_wrapper {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.Experience .skills_wrapper h3 {
+  font-size: 50px;
+}
+.Experience .skills_wrapper p {
+  font-size: 15px;
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 300;
+}
+.Experience .skills_wrapper .skills {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  margin-top: 20px;
+}
+.Experience .skills_wrapper .skills .skill {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  gap: 10px;
+}
+.Experience .skills_wrapper .skills .skill h4 {
+  font-size: large;
+}
+.Experience .skills_wrapper .skills .skill .skillBar {
+  width: 100%;
+  height: 10px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 30px;
+  position: relative;
+}
+.Experience .skills_wrapper .skills .skill .skillBar::after,
+.Experience .skills_wrapper .skills .skill .skillBar::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 50px;
+  background-color: #8754ff;
+  border-radius: 30px;
+  box-shadow: 0 0 5px rgb(205, 158, 255);
+}
+.Experience .skills_wrapper .skills .skill .skillBar::before {
+  content: attr(data-value);
+  font-size: 5px;
+  z-index: 5;
+  width: max-content;
+  color: #fff;
+  box-shadow: none;
+  left: 50%;
+  background-color: transparent;
+}
+.skillHtml::after {
+  width: 90% !important;
+}
+.skillCss::after {
+  width: 80% !important;
+}
+.skillJs::after {
+  width: 75% !important;
+}
+.skillReact::after {
+  width: 60% !important;
+}
+.skillTwail::after {
+  width: 80% !important;
+}
+.skillNode::after {
+  width: 80% !important;
+}
+
+
+.Ex
