--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -352,8 +352,301 @@
   width: 80% !important;
 }
 .skillNode::after {
-  width: 80% !important;
+  width: 60% !important;
 }
 
+.Experience_wrapper {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.Experience_wrapper .Experience_Card {
+  background: linear-gradient(90deg, rgba(44, 2, 89, 1) 0%, transparent);
+  padding: 30px;
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 
-.Ex
+.Experience_wrapper .Experience_Card h3 {
+  font-size: 35px;
+}
+.Experience_wrapper .Experience_Card p {
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: 300;
+}
+.Experience_wrapper .Experience_Card:hover p {
+  color: #fff;
+}
+.Experience_wrapper .Experience_Card ul li {
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: 300;
+}
+
+@media screen and (max-width: 1400px) {
+  .Experience_wrapper .Experience_Card h3 {
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .Experience {
+    flex-direction: column;
+  }
+  .Experience_wrapper,
+  .Experience .skills_wrapper {
+    width: 100%;
+  }
+}
+
+.project_container {
+  background: linear-gradient(
+    90deg,
+    rgba(44, 2, 89, 1) 0%,
+    rgba(16, 16, 16) 100%
+  );
+}
+.projects {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 25px;
+  margin-top: 50px;
+}
+.projects .project {
+  width: 100%;
+  position: relative;
+}
+.projects .project::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(0deg, #1e1e1e, transparent);
+  border-radius: 12px;
+}
+
+.projects .project img {
+  width: 100%;
+  border-radius: 12px;
+  transition: 0.6s;
+  overflow: hidden;
+}
+
+.projects .project:hover img {
+  transform: scale(1.05);
+}
+.projects .project .project_content {
+  position: absolute;
+  bottom: 0;
+  left: 0px;
+  z-index: 5;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  padding: 30px;
+}
+.projects .project .project_content h3 {
+  font-size: 35px;
+}
+
+.projects .project .project_content p {
+  color: rgba(255, 255, 255, 0.5);
+}
+.projects .project .project_content i {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 50px;
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #dcb2e0;
+  color: #8754ff;
+  border-radius: 50%;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1200px) {
+  .projects .project .project_container i {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .projects {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.contact_wrapper {
+  background: linear-gradient(
+    90deg,
+    rgba(44, 2, 89, 1) 0%,
+    rgba(16, 16, 16) 100%
+  );
+}
+.contact {
+  width: 70%;
+  margin: 0 auto;
+  background-color: #fff;
+  display: flex;
+  position: relative;
+  z-index: 1;
+}
+
+.contact::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 40%;
+  z-index: -1;
+  background: linear-gradient(0deg, #8754ff, #2c0d77);
+}
+.contact .contact_form {
+  width: 60%;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.contact .contact_form .input_wrapper {
+  display: flex;
+  gap: 20px;
+}
+.contact .contact_form h4 {
+  font-size: larger;
+}
+.contact .contact_form input {
+  height: 50px;
+  width: 100%;
+  padding: 0 10px;
+  outline: none;
+  border: none;
+  /* border-bottom: 2px solid #8754ff; */
+}
+.contact .contact_form textarea {
+  width: 100%;
+  height: 250px;
+  padding: 10px;
+  outline: none;
+  /* border-bottom: 2px solid #8754ff; */
+}
+.contact .contact_details {
+  width: 40%;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  color: aliceblue;
+}
+
+.contact .contact_form button::after {
+  /* content: ''; */
+  display: none;
+}
+.contact .contact_details .info_wrapper {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  color: aliceblue;
+}
+.contact .contact_details .social {
+  display: flex;
+  gap: 20px;
+  margin-top: 50px;
+}
+.contact .contact_details .social i,
+.contact .contact_details .info_wrapper i {
+  font-size: 20px;
+  height: 40px;
+  width: 50px;
+  background-color: #fff;
+  color: #8754ff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  transition: 0.6s;
+}
+
+.contact .contact_details .social i:hover {
+  transform: translateY(-10px);
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1400px) {
+  .contact {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 900px) {
+  .contact {
+    width: 100%;
+  }
+  .contact .contact_details,
+  .contact::after {
+    display: none;
+  }
+
+  .contact .contact_form {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .contact .contact_form .input_wrapper {
+    flex-direction: column;
+  }
+}
+
+.footer {
+  background: linear-gradient(
+    180deg,
+    rgba(44, 2, 89, 1) 0%,
+    rgba(16, 16, 16) 100%
+  );
+}
+
+.footerLinks {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.footerLinks a {
+  color: #fff;
+  font-size: 18px;
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  padding: 15px;
+}
+
+.footerLinks a:first-of-type {
+  border: none;
+}
+
+.footerLinks a:hover {
+  color: #8754ff;
+}
+.footer p {
+  text-align: center;
+  margin-top: 50px;
+  color: rgba(255, 255, 255, 0.4);
+}
+
+@media screen and (max-width: 500px) {
+  .footerLinks a {
+    padding-left: 10px;
+  }
+}
