--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -34,8 +34,8 @@
   color: var(--primary-color);
 }
 
-.headerContenth1 {
-  font-size: 100px;
+.headerContent h1 {
+  font-size: 50px;
   line-height: 100px;
   background: linear-gradient(90deg, var(--primary-color), #f78502 50%);
   -webkit-text-fill-color: transparent;
@@ -107,14 +107,14 @@
     inset: 0;
     background-image: conic-gradient(
       from var(--angle),
-      transparent 70%,
-      var(--primary-color) 72%
+      transparent 95%,
+      var(--primary-color) 96%
     );
     border-radius: 50%;
     animation: spin 2s infinite linear;
   }
   &::before {
-    filter: blur(50px);
+    filter: blur(25px);
     opacity: 0.5;
   }
 }
@@ -146,26 +146,40 @@
     flex-direction: column-reverse;
     align-items: center;
   }
-}
-.headerContainer .headerContent {
-  width: 100%;
-  margin-top: 80px;
-  text-align: center;
-  align-items: center;
-  margin-bottom: 50px;
+  .headerContainer .headerContent {
+    width: 100%;
+    margin-top: 80px;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 50px;
+  }
+  .borderAnimation {
+    /* position: absolute; */
+    height: 395px;
+    width: 395px;
+    &::after,
+    &::before {
+      inset: 4px;
+    }
+  }
 }
 
 @media screen and (max-width: 500px) {
   .headerImage img {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
   }
   .headerImage {
     width: 90%;
   }
   .borderAnimation {
-    width: 102%;
-    height: 102%;
+    /* position: absolute; */
+    height: 280px;
+    width: 280px;
+    &::after,
+    &::before {
+      inset: 4px;
+    }
   }
 }
 
