--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
   z-index: 1;
   background-color: #ffffff;
   color: #090909;
+  box-sizing: border-box;
 }
 
 .header-wrapper {
@@ -81,3 +82,8 @@ section {
   margin-bottom: 50px;
   color: var(--primary-color);
 }
+/* @media (max-width: 768px) {
+  .SectionTitle {
+    font-size: 32px;
+  }
+} */
