--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -661,6 +661,14 @@
 
 @media screen and (max-width: 500px) {
   .footerLinks a {
-    padding-left: 10px;
+    padding: 2px;
+    font-size: 8px;
+    border-left: none;
   }
+}
+
+html,
+body {
+  overflow-x: hidden;
+  max-width: 100%;
 }
